@@ -26,21 +26,22 @@
 		</license>
 	</licenses>
 	<properties>
-		<java.version>16</java.version>
-		<compiler-plugin.version>3.8.1</compiler-plugin.version>
+		<java.version>17</java.version>
+		<compiler-plugin.version>3.10.1</compiler-plugin.version>
 		<source-plugin.version>3.2.1</source-plugin.version>
-		<javadoc-plugin.version>3.2.0</javadoc-plugin.version>
-		<shade-plugin.version>3.2.4</shade-plugin.version>
+		<javadoc-plugin.version>3.4.0</javadoc-plugin.version>
+		<shade-plugin.version>3.3.0</shade-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<lombok.version>1.18.24</lombok.version>
 		<validation.version>2.0.1.Final</validation.version>
-		<guava.version>30.1.1-jre</guava.version>
+		<guava.version>31.1-jre</guava.version>
 		<javatuples.version>1.2</javatuples.version>
 		<jbox2d.version>2.2.1.1</jbox2d.version>
-		<steamworks4j.version>1.8.0</steamworks4j.version>
-		<steamworks4j-server.version>1.8.0</steamworks4j-server.version>
+		<steamworks4j.version>1.9.0</steamworks4j.version>
+		<steamworks4j-server.version>1.9.0</steamworks4j-server.version>
 		<waifupnp.version>master</waifupnp.version>
-		<discord.version>0.3</discord.version>
-		<ffsampledsp.version>0.9.32</ffsampledsp.version>
+		<discord.version>0.5.5</discord.version>
+		<ffsampledsp.version>0.9.46</ffsampledsp.version>
 	</properties>
 	<build>
 		<plugins>
@@ -50,7 +51,7 @@
 				<version>${compiler-plugin.version}</version>
 				<configuration>
 					<compilerArgs>
-						--enable-preview
+						<!-- \-\-enable-preview -->
 					</compilerArgs>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -92,9 +93,8 @@
 					<docletArtifact>
 						<groupId>nl.talsmasoftware</groupId>
 						<artifactId>umldoclet</artifactId>
-						<version>2.0.12</version>
+						<version>2.0.18</version>
 					</docletArtifact>
-					<additionalOptions>--enable-preview</additionalOptions>
 					<windowtitle>${project.name} ${project.version} API Documentation</windowtitle>
 					<doctitle>${project.name} ${project.version} API Documentation</doctitle>
 					<overview>${basedir}/overview.html</overview>
@@ -145,7 +145,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.22</version>
+			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
@@ -200,7 +200,7 @@
 		<!-- https://github.com/JnCrMx/discord-game-sdk4j -->
 		<dependency>
 			<groupId>com.github.JnCrMx</groupId>
-			<artifactId>discord-game-sdk4j</artifactId>
+    		<artifactId>discord-game-sdk4j</artifactId>
 			<version>${discord.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.tagtraum/ffsampledsp-complete -->
